--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -29,8 +29,8 @@
 
 	.logo {
 		img {
-			margin-top: 0.65rem;
-			max-height: 3.4rem;
+			margin-top: 0.8rem;
+			max-height: 3.2rem;
 			opacity: 0.7;
 		}
 		&:hover {
@@ -44,5 +44,5 @@
 }
 
 .nav-padding {
-	margin-top: 4.6rem;
+	// margin-top: 4.6rem;
 }
