--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -8,7 +8,7 @@
 @import '../../node_modules/skeleton-scss/scss/modules/tables';
 
 body {
-	margin: 0;
+	margin: 4.6rem 0 0;
 }
 nav {
 	&.topics {
