--- a/src/scss/topic.scss
+++ b/src/scss/topic.scss
@@ -37,6 +37,14 @@
 	}
 }
 
+.topic {
+	border-left: 1px solid $border;
+	margin-left: -1px;
+	padding-left: 4%;
+	margin-bottom: 0;
+	padding-bottom: 4%;
+}
+
 .topic-contents {
 	padding: 0 8%;
 	max-width: 550px;
@@ -52,41 +60,43 @@
 	}
 
 	body {
-		background-image: -webkit-gradient(linear,
-			left top,
-			right top,
-			color-stop(0, $alternate),
-			color-stop(30.66667%, $alternate),
-			color-stop(30.66667%, #fff),
-			color-stop(100%, #fff)
-		);
-		background-image: -webkit-linear-gradient(
-			left,
-			$alternate,
-			$alternate 30.66667%,
-			#fff 30.66667%,
-			#fff 100%
-		);
-		background-image: -moz-linear-gradient(
-			left,
-			$alternate,
-			$alternate 30.66667%,
-			#fff 30.66667%,
-			#fff 100%
-		);
-		background-image: -ms-linear-gradient(
-			left,
-			$alternate,
-			$alternate 30.66667%,
-			#fff 30.66667%,
-			#fff 100%
-		);
-		background-image: -o-linear-gradient(
-			left,
-			$alternate,
-			$alternate 30.66667%,
-			#fff 30.66667%,
-			#fff 100%
-		);
+		// background-image: -webkit-gradient(linear,
+		// 	left top,
+		// 	right top,
+		// 	color-stop(0, $alternate),
+		// 	color-stop(30.66667%, $alternate),
+		// 	color-stop(30.66667%, #fff),
+		// 	color-stop(100%, #fff)
+		// );
+		// background-image: -webkit-linear-gradient(
+		// 	left,
+		// 	#fff,
+		// 	#fff 30.5%,
+		// 	$border 30.5%,
+		// 	$border 30.66667%,
+		// 	#fff 30.66667%,
+		// 	#fff 100%
+		// );
+		// background-image: -moz-linear-gradient(
+		// 	left,
+		// 	$alternate,
+		// 	$alternate 30.66667%,
+		// 	#fff 30.66667%,
+		// 	#fff 100%
+		// );
+		// background-image: -ms-linear-gradient(
+		// 	left,
+		// 	$alternate,
+		// 	$alternate 30.66667%,
+		// 	#fff 30.66667%,
+		// 	#fff 100%
+		// );
+		// background-image: -o-linear-gradient(
+		// 	left,
+		// 	$alternate,
+		// 	$alternate 30.66667%,
+		// 	#fff 30.66667%,
+		// 	#fff 100%
+		// );
 	}
 }
